add still empty hydro package

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -16,6 +16,20 @@
   Timestamp                = {2010.04.09}
 }
 
+@Article{EngelhardtPit1955,
+  Title                    = {{Ü}ber die {Z}usammenhänge zwischen {P}orosität, {P}ermeabilität und {K}orngröße bei {S}anden und {S}andsteinen},
+  Author                   = {W. v. Engelhardt and H. Pitter},
+  Journal                  = {Heidelberger Beiträge zur Mineralogie und Petrographie},
+  Year                     = {1955},
+  Number                   = {6},
+  Pages                    = {477-491},
+  Volume                   = {2},
+
+  File                     = {EngelhardtPit1955.pdf:all/EngelhardtPit1955.pdf:PDF},
+  Owner                    = {carsten},
+  Timestamp                = {2015.11.11}
+}
+
 @Article{GeuzaineRemacle2009,
   Title                    = {{G}msh: a three-dimensional finite element mesh generator with built-in pre- and post-processing facilities},
   Author                   = {Geuzaine, C. and Remacle, J.-F.},
@@ -28,21 +42,21 @@
   Timestamp                = {2011.05.30}
 }
 
-@INCOLLECTION{Shewchuk96b,
-  author = {Jonathan Richard Shewchuk},
-  title = {{T}riangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and
-	{D}elaunay {T}riangulator},
-  booktitle = {Applied Computational Geometry: Towards Geometric Engineering},
-  publisher = {Springer-Verlag},
-  year = {1996},
-  editor = {Ming C. Lin and Dinesh Manocha},
-  volume = {1148},
-  series = {Lecture Notes in Computer Science},
-  pages = {203--222},
-  month = may,
-  note = {From the First ACM Workshop on Applied Computational Geometry},
-  owner = {Dlugosch.R},
-  timestamp = {2013.04.15}
+@InCollection{Shewchuk96b,
+  Title                    = {{T}riangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and {D}elaunay {T}riangulator},
+  Author                   = {Jonathan Richard Shewchuk},
+  Booktitle                = {Applied Computational Geometry: Towards Geometric Engineering},
+  Publisher                = {Springer-Verlag},
+  Year                     = {1996},
+  Editor                   = {Ming C. Lin and Dinesh Manocha},
+  Month                    = may,
+  Note                     = {From the First ACM Workshop on Applied Computational Geometry},
+  Pages                    = {203--222},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {1148},
+
+  Owner                    = {Dlugosch.R},
+  Timestamp                = {2013.04.15}
 }
 
 @Manual{tetgen,
@@ -71,34 +85,35 @@
   Timestamp                = {2013.08.28}
 }
 
-@ARTICLE{SinghGup2001,
-  author = {Bijendra Singh and D. Guptasarma},
-  title = {{N}ew method for fast computation of gravity and magnetic anomalies
-	from arbitrary polyhedra},
-  journal = {Geophysics},
-  year = {2001},
-  volume = {66},
-  pages = {521-526},
-  file = {SinghGup2001.pdf:all/SinghGup2001.pdf:PDF},
-  owner = {carsten},
-  timestamp = {2013.10.10}
+@Article{SinghGup2001,
+  Title                    = {{N}ew method for fast computation of gravity and magnetic anomalies from arbitrary polyhedra},
+  Author                   = {Bijendra Singh and D. Guptasarma},
+  Journal                  = {Geophysics},
+  Year                     = {2001},
+  Pages                    = {521-526},
+  Volume                   = {66},
+
+  File                     = {SinghGup2001.pdf:all/SinghGup2001.pdf:PDF},
+  Owner                    = {carsten},
+  Timestamp                = {2013.10.10}
 }
 
-@BOOK{Zienkiewicz1977,
-  title = {{T}he {F}inite {E}lement {M}ethod},
-  publisher = {McGraw-Hill, London},
-  year = {1977},
-  author = {O. C. Zienkiewicz},
-  edition = {3rd},
-  owner = {carsten},
-  timestamp = {2010.03.29}
+@Book{Zienkiewicz1977,
+  Title                    = {{T}he {F}inite {E}lement {M}ethod},
+  Author                   = {O. C. Zienkiewicz},
+  Publisher                = {McGraw-Hill, London},
+  Year                     = {1977},
+  Edition                  = {3rd},
+
+  Owner                    = {carsten},
+  Timestamp                = {2010.03.29}
 }
-
-@comment{jabref-meta: selector_keywords:}
-
-@comment{jabref-meta: selector_journal:}
 
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
+
+@comment{jabref-meta: selector_keywords:}
+
+@comment{jabref-meta: selector_journal:}
 
