new version string

--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -6,5 +6,6 @@
   Title                    = {{PyGIMLi - Eine Open Source Python Bibliothek zur Inversion und Modellierung in der Geophysik}},
   Author                   = {C. R{\"u}cker, T. G{\"u}nther, F. Wagner},
   Booktitle                = {{75. Jahrestagung der Deutschen Geophysikalischen Gesellschaft (DGG), Hannover 2015}},
-  Year                     = {2015},
+  Year                     = {2015}
 }
+
