add new tetgen cite

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -71,6 +71,25 @@
   Timestamp                = {2008.05.19}
 }
 
+@Article{Si2015,
+  Title                    = {{TetGen}, a {D}elaunay-{B}ased {Q}uality {T}etrahedral {M}esh {G}enerator},
+  Author                   = {Hang Si},
+  Journal                  = {{ACM} Transactions on Mathematical Software},
+  Year                     = {2015},
+
+  Month                    = {feb},
+  Number                   = {2},
+  Pages                    = {1--36},
+  Volume                   = {41},
+
+  Doi                      = {10.1145/2629697},
+  File                     = {Si2015.pdf:all/Si2015.pdf:PDF},
+  Owner                    = {carsten},
+  Publisher                = {Association for Computing Machinery ({ACM})},
+  Timestamp                = {2015.12.03},
+  Url                      = {http://dx.doi.org/10.1145/2629697}
+}
+
 @TechReport{Si2004,
   Title                    = {{T}et{G}en. {A} 3{D} {D}elaunay tetrahedral mesh generator. v.1.3},
   Author                   = {Hang Si},
