add grav2d example

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -117,6 +117,20 @@
   Timestamp                = {2013.10.10}
 }
 
+@Article{WonBev1987,
+  Title                    = {{C}omputing the gravitational and magnetic anomalies due to a polygon: {A}lgorithms and {F}ortran subroutines},
+  Author                   = {I. J. Won and Michael Bevis},
+  Journal                  = {Geophysics},
+  Year                     = {1987},
+  Number                   = {2},
+  Pages                    = {232-238},
+  Volume                   = {52},
+
+  File                     = {WonBev1987.pdf:all/WonBev1987.pdf:PDF},
+  Owner                    = {carsten},
+  Timestamp                = {2012.03.23}
+}
+
 @Book{Zienkiewicz1977,
   Title                    = {{T}he {F}inite {E}lement {M}ethod},
   Author                   = {O. C. Zienkiewicz},
