fixed examples. make checkall removes build/doc path first to ensure clean build

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -2,6 +2,24 @@
 % Encoding: UTF8
 
 
+@Article{Archie1942,
+  Title                    = {{T}he {E}lectrical {R}esistivity {L}og as an {A}id in {D}etermining {S}ome {R}eservoir {C}haracteristics},
+  Author                   = {G.E. Archie},
+  Journal                  = {Transactions of the {AIME}},
+  Year                     = {1942},
+
+  Month                    = {dec},
+  Number                   = {01},
+  Pages                    = {54--62},
+  Volume                   = {146},
+
+  Doi                      = {10.2118/942054-g},
+  Owner                    = {carsten},
+  Publisher                = {Society of Petroleum Engineers ({SPE})},
+  Timestamp                = {2016.07.05},
+  Url                      = {http://dx.doi.org/10.2118/942054-g}
+}
+
 @Article{ChenDavHag+2009,
   Title                    = {{A}lgorithm 887: {CHOLMOD}, supernodal sparse {C}holesky factorization and update/downdate},
   Author                   = {Y. Chen and T. A. Davis and W. W. Hager and S. Rajamanickam},
@@ -40,6 +58,19 @@
 
   Owner                    = {fwagner},
   Timestamp                = {2011.05.30}
+}
+
+@Article{NordsiekWel2008,
+  Title                    = {{A} new approach to fitting induced-polarization spectra},
+  Author                   = {Sven Nordsiek and Andreas Weller},
+  Journal                  = {Geophysics},
+  Year                     = {2008},
+  Number                   = {6},
+  Pages                    = {F235--F245},
+  Volume                   = {73},
+
+  Owner                    = {carsten},
+  Timestamp                = {2011.03.17}
 }
 
 @InCollection{Shewchuk96b,
