Add overview table for all methods of a class, minor doc improvements

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-Carsten Rücker: carsten@resistivity.net
-Thomas Günther: thomas@resistivity.net
+Carsten Rücker: carsten@pygimli.org
+Thomas Günther: thomas@pygimli.org
+Florian Wagner: florian@pygimli.org
