--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -1,19 +1,16 @@
-% This file was created with JabRef 2.10.
-% Encoding: UTF8
+% Encoding: UTF-8
 
-
-@Article{costabel2014VZJ,
-  Title                    = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
-  Author                   = {Stephan Costabel and Thomas G{\"u}nther},
-  Journal                  = {Vadose Zone Journal},
-  Year                     = {2014},
-  Number                   = {6},
-  Pages                    = {14},
-  Volume                   = {13},
-
-  Doi                      = {10.2136/vzj2013.09.0163},
-  Timestamp                = {2014.06.06},
-  Url                      = {https://dl.sciencesocieties.org/publications/vzj/abstracts/0/0/}
+@Article{CostabelGue2014VZJ,
+  author    = {Stephan Costabel and Thomas G{\"u}nther},
+  title     = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
+  journal   = {Vadose Zone Journal},
+  year      = {2014},
+  volume    = {13},
+  number    = {6},
+  pages     = {14},
+  doi       = {10.2136/vzj2013.09.0163},
+  timestamp = {2014.06.06},
+  url       = {https://dl.sciencesocieties.org/publications/vzj/abstracts/0/0/},
 }
 
 @InProceedings{Guenther2013NSG,
@@ -38,13 +35,164 @@
   Url                      = {http://dx.doi.org/10.1109/JSTARS.2015.2424152}
 }
 
-@InProceedings{ullmann2014,
-  Title                    = {{G}eophysical investigation at the {E}lbe estuary as basis for hydrogeological modelling},
-  Author                   = {Ullmann, A. and Kaiser, I. and G{\"u}nther, T. and Steuer, A. and Wiederhold, H.},
-  Booktitle                = {Ext. Abstr. 22nd EM Induction Workshop, Weimar, Germany.},
-  Year                     = {2014},
-
-  Owner                    = {TG},
-  Timestamp                = {2015.04.08}
+@Article{GuentherMue2012HESS,
+  author    = {G\"unther, T. and M\"uller-Petke, M.},
+  title     = {{H}ydraulic properties at the {N}orth {S}ea island of {B}orkum derived from joint inversion of magnetic resonance and electrical resistivity soundings},
+  journal   = {Hydrology and Earth System Sciences},
+  year      = {2012},
+  volume    = {16},
+  number    = {9},
+  pages     = {3279--3291},
+  doi       = {10.5194/hess-16-3279-2012},
+  owner     = {Guenther.T},
+  timestamp = {2016.09.14},
 }
 
+@Article{LoewerIgeWag2016,
+  author    = {Markus Loewer and Jan Igel and Norman Wagner},
+  title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
+  journal   = {{IEEE} J. Sel. Top. Appl. Earth Observations Remote Sensing},
+  year      = {2016},
+  volume    = {9},
+  number    = {1},
+  pages     = {212--230},
+  doi       = {10.1109/jstars.2015.2424152},
+  owner     = {TG},
+  publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
+  timestamp = {2016.09.14},
+  url       = {http://dx.doi.org/10.1109/JSTARS.2015.2424152},
+}
+
+@InProceedings{UllmannWieGueSie2015NSG,
+  author    = {Ullmann, A. and Wiederhold, H. and Günther, T. and Siemon, B.},
+  title     = {{H}ydrogeophysics at the {E}lbe-{W}eser estuary prior to groundwater modelling},
+  booktitle = {Ext. Abstr., Near Surface Geoscience 2015, Turin, Italy},
+  year      = {2015},
+  owner     = {TG},
+  timestamp = {2016.09.14},
+}
+
+@InProceedings{IgelStaGue2016SAGEEP,
+  author    = {Igel, J. and Stadler, S. and Günther, T.},
+  title     = {{H}igh-resolution investigation of the capillary transition zone and its influence on {GPR} signatures},
+  booktitle = {Ext. Abstr., SAGEEP, Denver, USA},
+  year      = {2016},
+  owner     = {TG},
+  timestamp = {2016.06.28},
+}
+
+@Article{CosciaGreLin+2010,
+  author    = {I. Coscia and S. Greenhalgh and N. Linde and J. Doetsch and L. Marescot and T. G{\"u}nther and A. Green},
+  title     = {3{D} crosshole apparent resistivity static inversion and monitoring of a coupled river-aquifer system},
+  journal   = {Geophysics},
+  year      = {2011},
+  volume    = {76},
+  number    = {2},
+  pages     = {G49-59},
+  note      = {submitted},
+  owner     = {Guenther.T},
+  timestamp = {2010.08.09},
+}
+
+@PhdThesis{rueckerdiss,
+  author    = {C. R{\"u}cker},
+  title     = {{A}dvanced {E}lectrical {R}esistivity {M}odelling and {I}nversion using {U}nstructured {D}iscretization},
+  school    = {University of Leipzig},
+  year      = {2011},
+  note      = {in preparation},
+  owner     = {Guenther.T},
+  timestamp = {2010.09.17},
+}
+
+@Article{CostabelGueDluMue2016,
+  author    = {Stephan Costabel and Thomas Günther and Raphael Dlugosch and Mike Müller-Petke},
+  title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
+  journal   = {GEOPHYSICS},
+  year      = {2016},
+  volume    = {81},
+  number    = {4},
+  pages     = {WB119--WB129},
+  month     = {jun},
+  doi       = {10.1190/geo2015-0467.1},
+  file      = {costabel2016G.pdf:costabel2016G.pdf:PDF},
+  owner     = {TG},
+  publisher = {Society of Exploration Geophysicists},
+  timestamp = {2016.09.14},
+  url       = {http://dx.doi.org/10.1190/geo2015-0467.1},
+}
+
+@Article{WagnerGueSchMau2015GEO,
+  author    = {Wagner, F. and Günther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
+  title     = {{C}onstructive optimization of electrode locations for target-focused resistivity monitoring},
+  journal   = {Geophysics},
+  year      = {2015},
+  volume    = {80},
+  number    = {2},
+  pages     = {E29--E40},
+  doi       = {10.1190/geo2014-0214.1},
+  owner     = {TG},
+  timestamp = {2015.01.14},
+}
+
+@InProceedings{GuentherRuecker2006SAGEEP-Joint,
+  author    = {T. G{\"u}nther and C. R{\"u}cker},
+  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
+  booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
+  year      = {2006},
+  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
+  doi       = {10.4133/1.2923578},
+  file      = {GuentherRuecker2006SAGEEP-Joint.pdf:GuentherRuecker2006SAGEEP-Joint.pdf:PDF},
+  owner     = {Guenther.T},
+  timestamp = {2015.12.21},
+}
+
+@InProceedings{GuentherDluHolYar2010SAGEEP,
+  author    = {Thomas Günther and Raphael Dlugosch and Raphael Holland and Ugur Yaramanci},
+  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
+  booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
+  year      = {2010},
+  volume    = {23},
+  pages     = {302-307},
+  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
+  doi       = {10.4133/1.3445447},
+  owner     = {Guenther.T},
+  timestamp = {2016.09.14},
+}
+
+@Article{guenther2016JoAG,
+  author    = {Thomas G{\"u}nther and Tina Martin},
+  title     = {{S}pectral two-dimensional inversion of frequency-domain induced polarisation data from a mining slag heap},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2016},
+  volume    = {135},
+  pages     = {436-448},
+  doi       = {10.1016/j.jappgeo.2016.01.008},
+  file      = {guenther2016JoAG.pdf:guenther2016JoAG.pdf:PDF},
+  owner     = {TG},
+  timestamp = {2015.12.21},
+}
+
+@Article{Hupfer2016,
+  author    = {Sarah Hupfer and Tina Martin and Andreas Weller and Thomas G\"{u}nther and Kerstin Kuhn and Victorien Djotsa Nguimeya Ngninjio and Ursula Noell},
+  title     = {{P}olarization effects of unconsolidated sulphide-sand-mixtures},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2016},
+  volume    = {135},
+  pages     = {456-465},
+  month     = {dec},
+  doi       = {10.1016/j.jappgeo.2015.12.003},
+  owner     = {Dlugosch.R},
+  publisher = {Elsevier {BV}},
+  timestamp = {2016.12.16},
+}
+
+@InProceedings{GuentherMarRue2016IPWS,
+  author    = {Günther, T. and Martin, T. and Rücker, C.},
+  title     = {{S}pectral {I}nversion of {SIP} field data using py{GIML}i/{BERT}},
+  booktitle = {Ext. Abstr., 4th International Workshop on Induced Polarization, Aarhus, Denmark},
+  year      = {2016},
+  owner     = {TG},
+  timestamp = {2016.06.28},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
