some bib entry corrections

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -77,8 +77,8 @@
   volume    = {76},
   number    = {2},
   pages     = {G49-59},
-  note      = {submitted},
   owner     = {Guenther.T},
+  doi       = {10.1190/1.3553003},
   timestamp = {2010.08.09},
 }
 
@@ -86,8 +86,8 @@
   author    = {C. R{\"u}cker},
   title     = {{A}dvanced {E}lectrical {R}esistivity {M}odelling and {I}nversion using {U}nstructured {D}iscretization},
   school    = {University of Leipzig},
+  note      = {http://nbn-resolving.de/urn:nbn:de:bsz:15-qucosa-69066},
   year      = {2011},
-  note      = {in preparation},
   owner     = {Guenther.T},
   timestamp = {2010.09.17},
 }
