--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -2,7 +2,16 @@
 % Encoding: UTF8
 
 
-@InProceedings{RGW15,
+EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
+
+@InProceedings{RGW15EAGE,
+  Title                    = {{PyGIMLi - An Open Source Python Library for Inversion and Modelling in Geophysics}},
+  Author                   = {C. R{\"u}cker, T. G{\"u}nther, F. Wagner},
+  Booktitle                = {{EAGE workshop on Open-source Software in Geosciences, EAGE, Vienna}},
+  Year                     = {2015}
+}
+
+@InProceedings{RGW15DGG,
   Title                    = {{PyGIMLi - Eine Open Source Python Bibliothek zur Inversion und Modellierung in der Geophysik}},
   Author                   = {C. R{\"u}cker, T. G{\"u}nther, F. Wagner},
   Booktitle                = {{75. Jahrestagung der Deutschen Geophysikalischen Gesellschaft (DGG), Hannover 2015}},
