--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: UTF8
+% Encoding: UTF-8
 
 
 @Article{Archie1942,
@@ -173,11 +172,29 @@
   Timestamp                = {2010.03.29}
 }
 
-@comment{jabref-meta: selector_publisher:}
+@Article{PeltonWarHal1978,
+  author    = {W.H. Pelton and S.H. Ward and P.G. Hallof and W.R. Sill and P. H. Nelson},
+  title     = {{M}ineral discrimination and removal of inductive coupling with multifrequency ip},
+  journal   = {Geophysics},
+  year      = {1978},
+  volume    = {43},
+  number    = {3},
+  pages     = {588--609},
+  file      = {PeltonWarHal1978.pdf:all/PeltonWarHal1978.pdf:PDF},
+  groups    = {SIP},
+  owner     = {carsten},
+  timestamp = {2011.03.17},
+}
 
-@comment{jabref-meta: selector_author:}
+@Article{Seigel1959,
+  author    = {Seigel, H. O.},
+  title     = {Mathematical formuiation and type curves for induced polarization},
+  journal   = {Geophysics},
+  year      = {1959},
+  volume    = {24},
+  pages     = {547-565},
+  owner     = {carsten},
+  timestamp = {2017.05.23},
+}
 
-@comment{jabref-meta: selector_keywords:}
-
-@comment{jabref-meta: selector_journal:}
-
+@Comment{jabref-meta: databaseType:bibtex;}
