--- a/doc/tutorial/commands.tex
+++ b/doc/tutorial/commands.tex
@@ -2,7 +2,7 @@
 \DeclareMathOperator{\IRLS}{IRLS}
 %matrices
 \newcommand{\A}{\mathbf{A}}
-\newcommand{\B}{{\bf B}}
+\newcommand{\B}{{\mathbf{B}}}
 \newcommand{\C}{\mathbf{C}} % constraint matrix, alt. \W_m
 \newcommand{\Cd}{\mathbf{C_d}} % data covariance, alt. \W_m
 \newcommand{\Cm}{\mathbf{C_m}} % data covariance, alt. \W_m
@@ -11,7 +11,7 @@
 \renewcommand{\H}{\mathbf{H}} % Hessian
 \newcommand{\I}{\mathbf{I}} % identity
 \renewcommand{\P}{\mathbf{P}} % parameter matrix
-\newcommand{\R}{{\bf R}} % resolution matrix
+\newcommand{\R}{{\mathbf{R}}} % resolution matrix
 \renewcommand{\S}{\mathbf{S}} % Sensitivity matrix
 \newcommand{\SV}{\mathbf{\Lambda}} % Singulärwertmatrix , alt. \Sigma
 \renewcommand{\SS}{\mathbf{\widehat{S}}} % data-scaled Sensitivity
