--- a/doc/tutorial/gimli-tutorial.tex
+++ b/doc/tutorial/gimli-tutorial.tex
@@ -17,12 +17,12 @@ Thomas G{\"u}nther\thanks{Leibniz Institute for Applied Geophysics, Hannover (Ge
 Carsten R{\"u}cker\thanks{Institute of Geology and Geophysics, University of Leipzig (Germany)}
 }
 \title{GIMLi --\\ Geophysical Inversion and Modelling Library \\-- programmers tutorial}
-\newcommand{\cw}[1]{{\bf\texttt{#1}}}
+\newcommand{\cw}[1]{{\textbf{\texttt{#1}}}}
 \newcommand{\invert}{invert}
-\newcommand{\command}[1]{\par{\tt \$ #1}}
-\newcommand{\file}[1]{{\tt #1}}
+\newcommand{\command}[1]{\par{\texttt{\$ #1}}}
+\newcommand{\file}[1]{{\texttt{#1}}}
 \newcommand{\sperre}{\,\rule{1ex}{2ex}}
-\newcommand{\mycomment}[2]{\sperre{\em #1: #2}\sperre}
+\newcommand{\mycomment}[2]{\sperre{\textem{#1: #2}}\sperre}
 
 \lstloadlanguages{[Visual]C++,[ISO]C++,Python}
 \lstset{language=[ISO]C++}
