EAGE year correction

--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -7,8 +7,9 @@ EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
 @InProceedings{RGW15EAGE,
   Title                    = {{PyGIMLi - An Open Source Python Library for Inversion and Modelling in Geophysics}},
   Author                   = {C. R{\"u}cker, T. G{\"u}nther, F. Wagner},
-  Booktitle                = {{EAGE workshop on Open-source Software in Geosciences, EAGE, Vienna}},
-  Year                     = {2015}
+  Booktitle                = {{78th EAGE Conference and Exhibition 2016, WS08-Open Source Software in Applied Geosciences}},
+  Doi                      = {10.3997/2214-4609.201601651},
+  Year                     = {2016}
 }
 
 @InProceedings{RGW15DGG,
@@ -17,4 +18,3 @@ EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
   Booktitle                = {{75. Jahrestagung der Deutschen Geophysikalischen Gesellschaft (DGG), Hannover 2015}},
   Year                     = {2015}
 }
-
