some gimli related references in bib

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -183,4 +183,60 @@
   timestamp = {2016.06.28},
 }
 
+@Article{loewer2017GJI,
+  author    = {M. Loewer and T. G\"{u}nther and J. Igel and S. Kruschwitz and T. Martin and N. Wagner},
+  title     = {Ultra-broad-band electrical spectroscopy of soils and sediments{\textemdash}a combined permittivity and conductivity model},
+  journal   = {Geophysical Journal International},
+  year      = {2017},
+  volume    = {210},
+  number    = {3},
+  pages     = {1360--1373},
+  month     = {jun},
+  doi       = {10.1093/gji/ggx242},
+  owner     = {Dlugosch.R},
+  publisher = {Oxford University Press ({OUP})},
+  timestamp = {2017.07.27},
+  url       = {https://doi.org/10.1093/gji/ggx242},
+}
+
+@Article{ronczka2017SE,
+  author    = {Mathias Ronczka and Kristofer Hellman and Thomas G\"{u}nther and Roger Wis{\'{e}}n and Torleif Dahlin},
+  title     = {Electric resistivity and seismic refraction tomography: a challenging joint underwater survey at \"{A}sp\"{o} Hard Rock Laboratory},
+  journal   = {Solid Earth},
+  year      = {2017},
+  volume    = {8},
+  number    = {3},
+  pages     = {671--682},
+  month     = {jun},
+  doi       = {10.5194/se-8-671-2017},
+  owner     = {Dlugosch.R},
+  publisher = {Copernicus {GmbH}},
+  timestamp = {2017.07.27},
+  url       = {https://doi.org/10.5194/se-8-671-2017},
+}
+
+@Article{hellman2017JoAG,
+  author    = {Kristofer Hellman and Mathias Ronczka and Thomas G\"{u}nther and Marcus Wennermark and Carsten R\"{u}cker and Torleif Dahlin},
+  title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2017},
+  volume    = {143},
+  pages     = {169--181},
+  month     = {aug},
+  doi       = {10.1016/j.jappgeo.2017.06.008},
+  owner     = {Dlugosch.R},
+  publisher = {Elsevier {BV}},
+  timestamp = {2017.07.27},
+  url       = {https://doi.org/10.1016/j.jappgeo.2017.06.008},
+}
+
+@Article{RueckerGueWag2017GaG,
+  author    = {Carsten Rücker and Thomas Günther and Florian Wagner},
+  title     = {{pyGIMLi}: An open-source library for modelling and inversion in geophysics},
+  journal   = {Computers and Geosciences},
+  year      = {2017},
+  owner     = {Dlugosch.R},
+  timestamp = {2017.07.27},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
