--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -233,7 +233,7 @@
 @Article{RueckerGueWag2017GaG,
   author    = {Carsten Rücker and Thomas Günther and Florian Wagner},
   title     = {{pyGIMLi}: An open-source library for modelling and inversion in geophysics},
-  journal   = {Computers and Geosciences},
+  journal   = {Computers \& Geosciences},
   year      = {2017},
   owner     = {Dlugosch.R},
   timestamp = {2017.07.27},
