--- a/doc/references.bib
+++ b/doc/references.bib
@@ -197,4 +197,127 @@
   timestamp = {2017.05.23},
 }
 
+@Article{RueckerGueWag2017GaG,
+  author    = {Carsten Rücker and Thomas Günther and Florian Wagner},
+  title     = {{pyGIMLi}: An open-source library for modelling and inversion in geophysics},
+  journal   = {Computers \& Geosciences},
+  year      = {2017},
+  owner     = {Dlugosch.R},
+  timestamp = {2017.07.27},
+}
+
+@Article{moser1991G,
+  author    = {Moser, TJ},
+  title     = {{S}hortest path calculation of seismic rays},
+  journal   = {Geophysics},
+  year      = {1991},
+  volume    = {56},
+  number    = {1},
+  pages     = {59-67},
+  issn      = {0016-8033},
+  doi       = {10.1190/1.1442958},
+  owner     = {Dlugosch.R},
+  timestamp = {2017.08.21},
+  type      = {Journal Article},
+}
+
+@Article{podvin1991GJI,
+  author    = {Pascal Podvin and Isabelle Lecomte},
+  title     = {Finite difference computation of traveltimes in very contrasted velocity models: a massively parallel approach and its associated tools},
+  journal   = {Geophysical Journal International},
+  year      = {1991},
+  volume    = {105},
+  number    = {1},
+  pages     = {271--284},
+  month     = {apr},
+  doi       = {10.1111/j.1365-246x.1991.tb03461.x},
+  owner     = {Dlugosch.R},
+  publisher = {Oxford University Press ({OUP})},
+  timestamp = {2017.08.21},
+  url       = {https://doi.org/10.1111/j.1365-246x.1991.tb03461.x},
+}
+
+@Article{loewer2017GJI,
+  author    = {M. Loewer and T. G\"{u}nther and J. Igel and S. Kruschwitz and T. Martin and N. Wagner},
+  title     = {Ultra-broad-band electrical spectroscopy of soils and sediments{\textemdash}a combined permittivity and conductivity model},
+  journal   = {Geophysical Journal International},
+  year      = {2017},
+  volume    = {210},
+  number    = {3},
+  pages     = {1360--1373},
+  month     = {jun},
+  doi       = {10.1093/gji/ggx242},
+  owner     = {Dlugosch.R},
+  publisher = {Oxford University Press ({OUP})},
+  timestamp = {2017.07.27},
+  url       = {https://doi.org/10.1093/gji/ggx242},
+}
+
+@Article{LoewerIgeWag2016,
+  author    = {Markus Loewer and Jan Igel and Norman Wagner},
+  title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
+  journal   = {{IEEE} J. Sel. Top. Appl. Earth Observations Remote Sensing},
+  year      = {2016},
+  volume    = {9},
+  number    = {1},
+  pages     = {212--230},
+  doi       = {10.1109/jstars.2015.2424152},
+  owner     = {TG},
+  publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
+  timestamp = {2016.09.14},
+  url       = {http://dx.doi.org/10.1109/JSTARS.2015.2424152},
+}
+
+@Article{hellman2017JoAG,
+  author    = {Kristofer Hellman and Mathias Ronczka and Thomas G\"{u}nther and Marcus Wennermark and Carsten R\"{u}cker and Torleif Dahlin},
+  title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2017},
+  volume    = {143},
+  pages     = {169--181},
+  month     = {aug},
+  doi       = {10.1016/j.jappgeo.2017.06.008},
+  owner     = {Dlugosch.R},
+  publisher = {Elsevier {BV}},
+  timestamp = {2017.08.21},
+  url       = {https://doi.org/10.1016/j.jappgeo.2017.06.008},
+}
+
+@InProceedings{GuentherRuecker2006SAGEEP-Joint,
+  author    = {T. G{\"u}nther and C. R{\"u}cker},
+  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
+  booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
+  year      = {2006},
+  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
+  doi       = {10.4133/1.2923578},
+  file      = {GuentherRuecker2006SAGEEP-Joint.pdf:GuentherRuecker2006SAGEEP-Joint.pdf:PDF},
+  owner     = {Guenther.T},
+  timestamp = {2017.08.21},
+}
+
+@InProceedings{GuentherDluHolYa2010SAGEEP,
+  author    = {Thomas Günther and Raphael Dlugosch and Raphael Holland and Ugur Yaramanci},
+  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
+  booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
+  year      = {2010},
+  volume    = {23},
+  pages     = {302-307},
+  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
+  doi       = {10.4133/1.3445447},
+  file      = {GuentherDluHolYa2010SAGEEP.pdf:GuentherDluHolYa2010SAGEEP.pdf:PDF},
+  owner     = {Guenther.T},
+  timestamp = {2010.11.26},
+}
+
+@InProceedings{Guenther2013NSG,
+  author    = {Thomas G{\"u}nther},
+  title     = {{O}n {I}nversion of {F}requency {D}omain {E}lectromagnetic {D}ata in {S}alt {W}ater {P}roblems - {S}ensitivity and {R}esolution},
+  booktitle = {Ext. Abstr., 19th European Meeting of Environmental and Engineering Geophysics, Bochum, Germany},
+  year      = {2013},
+  doi       = {10.3997/2214-4609.20131387},
+  file      = {Guenther2013NSG.pdf:Guenther2013NSG.pdf:PDF},
+  owner     = {Guenther.T},
+  timestamp = {2013.09.17},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
